--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,21 @@
 body{
-	margin-top: 50px;
+}
+
+div div div a img{
+	height: 200px;
+}
+
+div div div img{
+	margin-top: 20px;
+}
+
+h4{
+	min-height: 45px;
+	margin: 5px 0 10px 0;
+}
+
+@media(max-width: 767px){
+	.align{
+		text-align: left;
+	}
 }
